src/components/About/About.module.css
@import "../../vars.css";

.container {
  position: relative;
  background-color: rgba(255, 255, 204, 0.6);
  border-radius: 15px;
  padding: 73px;
  margin-top: 129px;
  z-index: 1;
  margin-left: 10%;
  margin-right: 10%;
}

.title {
  color: var(--color-text);
  font-size: 35px;
  font-weight: 700;
  letter-spacing: 1.75px;
  text-transform: uppercase;
}

.content {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.aboutImage {
  width: 35%;
  border-radius: 50%; /* Make the image rounded */
}

.aboutItems {
  color: var(--color-text);
  display: flex;
  flex-direction: column;
  gap: 50px;
}

.aboutItem {
  display: flex;
  flex-direction: row;
  align-items: center;
  border-radius: 20px;
  list-style: none;
  padding: 25px;
  background-image: linear-gradient(
    90deg,
    rgba(165, 215, 232, 0.42) 0%,
    rgba(255, 255, 255, 0) 100%
  );
  background-size: 0 100%;
  background-repeat: no-repeat;
  transition: 0.4s;
}

.aboutItem:hover {
  background-size: 100% 100%;
}

.aboutItem h3 {
  font-size: 25px;
  font-weight: 600;
}

.aboutItem p {
  font-size: 25px;
}

.aboutIcon {
  font-size: 40px; /* Increase the size of the icon */
  margin-right: 20px; /* Add more spacing between the icon and text */
}

@media screen and (max-width: 830px) {
  .container {
    background-color: transparent;
    padding-left: 0;
    padding-right: 0;
  }

  .content {
    flex-direction: column;
  }

  .aboutImage {
    display: none;
  }

  .aboutItems {
    margin-top: 29px;
  }

  .aboutItem {
    padding-left: 0;
    padding-right: 0;
  }
}

